--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,4 @@
 spring.application.name=Parcial3
-server.port=8080
 
 spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10779475?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Forzar carga de schema.sql y data.sql
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:Schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 
