--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,10 +19,10 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:Schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
